[package]
name = "click"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
ratatui = { version = "0.30.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"

smol_num = { path = "./smol_num" }
ctrlc = "3.5.2"
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
